style.css
#Fullscreen_Image{
	position: fixed;
	left: 0;
	top: 0;
	width: 40px;
	height: 30px
}

.noSelect {
	-webkit-user-select: none;  
	-moz-user-select: none;    
	-ms-user-select: none;      
	user-select: none;
}

.floating-tip{
	padding: 2px 5px;
	border-radius: 7px;
	background-color: #777777;
	color: white;
}

#body{
	margin: 0;
}

div.page{
	position: fixed;
	display: block;
	height: 100%;
	width: 100%;
	text-align: center;
}

div.DevicesContainerVMargin{
	display: block;
	text-align: center;
}

#devicesContainer{
	display: inline-block;
	text-align: center;
}

div.ContainerTitleDiv{
	text-align: left;
	height: 1.5em;
	position: relative;

}
	#DeviceDirectoryTitleDiv{
		height: 2em;
	}

	span.ContainerTitleSpan{
		display: block;
		position: absolute;
		bottom: 0;
	}


/*

	Width and height is set pragmatically in resize method of script.js

*/

span.DeviceContainer{
	border: 1px solid #707070;
	display: inline-block;
	background-color: #F0F0F0;
	overflow-y: auto;
	text-align: justify;
	border-radius: 5px;
}
#DeviceDirectory{
	overflow: hidden;
}

span.DeviceWrapper{
	display: inline-block;
}

span.Device{
	border-radius: 5px;
	padding: 10px;
	margin: 10px;
	display: block;
	border: 1px solid #CCCCCC;
	background-color: white;
	text-align: center;
}
	span.Device_InnerSpan{
		width: 96px;
		display: block;
	}

	span.Device_Image{
		height: 72px;
		text-align: center;
	}
		span.Device_NoImage, span.Device_Loading, span.Device_Failed{
			font-style: italic;
			font-size: 60%;
			line-height: 72px;
		}

	span.Device_Title{
		text-align: center;
		font-size: 70%;
		height: 1.5em;
		line-height: 1.5em;
		white-space: nowrap;
		overflow: hidden;
		text-overflow: ellipsis;
	}

	span.Device_Spacing{
		height: 12px;
	}

span.PageBrowser{
	display: inline-block;
}
	#jumpSpan{
		float: left;
	}
	#pageOfAndNextPrev{
		float: right;
	}
	#jumpSpan, #pageOfAndNextPrev{
		display: inline-block;

	}
	#pageOf, #nextPrev{
		display: block;
	}

